tests/valid/core/define-literal.coil
' @test valid
' @covers DEFINE
' @description DEFINE with a literal value

DEFINE max_retries
3
END

EXIT
